env/realm-dev/velocity-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocity-proxy
spec:
  template:
    spec:
      containers:
        - name: velocity
          volumeMounts:
            - name: config-volume
              mountPath: /opt/velocity/plugins/velagones/application.conf
              subPath: plugins-velagones-application.conf
            - name: config-volume
              mountPath: /opt/velocity/velocity.toml
              subPath: velocity.toml
            - name: config-volume
              mountPath: /opt/velocity/forwarding.secret
              subPath: forwarding.secret
      volumes:
        - name: config-volume
          projected:
            sources:
              - configMap:
                  name: velocity-config
